# poetry_ec2_dependencies

./: README.md  pyproject.toml
