[tool.poetry]
name = "data-warehouse"
version = "0.1.0"
description = ""
authors = ["Cameron Otsuka <cotsuka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.15.0"
jinja2 = "^2.11.2"
botocore = "^1.19.62"
six = "^1.15.0"
jmespath = "^0.10.0"
python-dateutil = "^2.8.1"
urllib3 = "^1.26.3"
pyparsing = "^2.4.7"
atomicwrites = "^1.4.0"
attrs = "^20.3.0"
boto = "^2.49.0"
colorama = "^0.4.4"
markupsafe = "^1.1.1"
packaging = "^20.8"
py = "^1.10.0"
s3transfer = "^0.3.4"
wcwidth = "^0.2.5"
pandas = "^1.2.1"
pandasql = "^0.7.3"
paramiko = "^2.7.2"
simple_salesforce = "^1.10.1"
psycopg2-binary = "^2.8.6"
matplotlib = "^3.3.4"
ipykernel = "^5.5.0"
jupyter = "^1.0.0"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
